--- a/arml/example/Cargo.toml
+++ b/arml/example/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "cxrml-example"
+name = "arml-example"
 version = "0.3.0"
-authors = ["Chainpool <https://www.chainx.org>"]
+authors = ["Akropolis <https://www.akropolis.io>"]
 
 [dependencies]
 hex-literal = "0.1.0"
@@ -17,7 +17,7 @@ srml-support = { git = "https://github.com/paritytech/substrate", default_featur
 srml-system = { git = "https://github.com/paritytech/substrate", default_features = false }
 srml-balances = { git = "https://github.com/paritytech/substrate", default_features = false }
 
-cxrml-support = { path = "../support",  default_features = false }
+arml-support = { path = "../support",  default_features = false }
 
 [features]
 default = ["std"]
@@ -33,5 +33,5 @@ std=[
     "srml-support/std",
     "srml-system/std",
     "srml-balances/std",
-    "cxrml-support/std",
+    "arml-support/std",
 ]
