--- a/arml/exchange/pendingorders/Cargo.toml
+++ b/arml/exchange/pendingorders/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "cxrml-exchange-pendingorders"
+name = "arml-exchange-pendingorders"
 version = "0.3.0"
-authors = ["Chainpool <https://www.chainx.org>"]
+authors = ["Akropolis <https://www.akropolis.io>"]
 
 [dependencies]
 hex-literal = "0.1.0"
@@ -19,11 +19,11 @@ srml-balances = { git = "https://github.com/paritytech/substrate", default_featu
 
 log = "0.4"
 
-# cxrml module
-cxrml-system = { path = "../../system", default-features = false }
-cxrml-associations = { path = "../../associations", default-features = false }
-cxrml-support = { path = "../../support", default_features = false }
-cxrml-tokenbalances = { path = "../../tokenbalances", default_features = false }
+# arml module
+arml-system = { path = "../../system", default-features = false }
+arml-associations = { path = "../../associations", default-features = false }
+arml-support = { path = "../../support", default_features = false }
+arml-tokenbalances = { path = "../../tokenbalances", default_features = false }
 
 [features]
 default = ["std"]
@@ -39,8 +39,8 @@ std=[
     "srml-support/std",
     "srml-system/std",
     "srml-balances/std",
-    "cxrml-system/std",
-    "cxrml-associations/std",
-    "cxrml-support/std",
-    "cxrml-tokenbalances/std",
+    "arml-system/std",
+    "arml-associations/std",
+    "arml-support/std",
+    "arml-tokenbalances/std",
 ]
