--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "chainx"
+name = "akro"
 version = "0.3.0"
-authors = ["Chainpool <https://www.chainx.org>"]
+authors = ["Akropolis <https://www.akropolis.io>"]
 
 [dependencies]
 jsonrpc-macros = { git="https://github.com/paritytech/jsonrpc.git" }
@@ -24,16 +24,16 @@ ctrlc = { version = "3.0", features = ["termination"] }
 serde = { version = "1.0", default_features = false }
 serde_derive = { version = "1.0", optional = true }
 parity-codec = { version = "2.0" }
-chainx-primitives = { path = "./primitives" }
-chainx-consensus = { path = "./consensus" }
-chainx-executor = { path = "./executor" }
-chainx-runtime = { path = "./runtime" }
-chainx-network = { path = "./network" }
-chainx-pool = { path = "./pool" }
-chainx-rpc = { path = "./rpc" }
-chainx-api = { path = "./api" }
-cxrml-exchange-pendingorders = { path = "./cxrml/exchange/pendingorders" }
-cxrml-tokenbalances = { path = "./cxrml/tokenbalances" }
+akro-primitives = { path = "./primitives" }
+akro-consensus = { path = "./consensus" }
+akro-executor = { path = "./executor" }
+akro-runtime = { path = "./runtime" }
+akro-network = { path = "./network" }
+akro-pool = { path = "./pool" }
+akro-rpc = { path = "./rpc" }
+akro-api = { path = "./api" }
+arml-exchange-pendingorders = { path = "./arml/exchange/pendingorders" }
+arml-tokenbalances = { path = "./arml/tokenbalances" }
 
 env_logger = "0.5.13"
 rhododendron = "0.3"
@@ -50,9 +50,9 @@ slog = "^2"
 log = "0.3"
 
 # bitcoin-rust
-primitives = { git = "https://github.com/chainx-org/bitcoin-rust" }
-chain = { git = "https://github.com/chainx-org/bitcoin-rust" }
-keys = { git = "https://github.com/chainx-org/bitcoin-rust" }
+primitives = { git = "https://github.com/akropolis.io/bitcoin-rust" }
+chain = { git = "https://github.com/akropolis.io/bitcoin-rust" }
+keys = { git = "https://github.com/akropolis.io/bitcoin-rust" }
 
 [workspace]
 members = [
@@ -64,17 +64,17 @@ members = [
     "pool",
     "rpc",
     "api",
-    "cxrml/system",
-    "cxrml/support",
-    "cxrml/tokenbalances",
-    "cxrml/multisig",
-    "cxrml/associations",
-    "cxrml/bridge/btc",
-    "cxrml/mining/staking",
-    "cxrml/mining/tokenstaking",
-    "cxrml/funds/financialrecords",
-    "cxrml/funds/withdrawal",
-    "cxrml/exchange/pendingorders",
-    "cxrml/exchange/matchorder",
-    "cxrml/example",
+    "arml/system",
+    "arml/support",
+    "arml/tokenbalances",
+    "arml/multisig",
+    "arml/associations",
+    "arml/bridge/btc",
+    "arml/mining/staking",
+    "arml/mining/tokenstaking",
+    "arml/funds/financialrecords",
+    "arml/funds/withdrawal",
+    "arml/exchange/pendingorders",
+    "arml/exchange/matchorder",
+    "arml/example",
 ]
