--- a/arml/exchange/matchorder/Cargo.toml
+++ b/arml/exchange/matchorder/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "cxrml-exchange-matchorder"
+name = "arml-exchange-matchorder"
 version = "0.3.0"
-authors = ["Chainpool <https://www.chainx.org>"]
+authors = ["Akropolis <https://www.akropolis.io>"]
 
 [dependencies]
 hex-literal = "0.1.0"
@@ -18,12 +18,12 @@ srml-system = { git = "https://github.com/paritytech/substrate", default_feature
 srml-balances = { git = "https://github.com/paritytech/substrate", default_features = false }
 log = "0.4"
 
-# cxrml module
-cxrml-system = { path = "../../system", default-features = false }
-cxrml-associations = { path = "../../associations", default-features = false }
-cxrml-support = { path = "../../support",  default_features = false }
-cxrml-tokenbalances = { path = "../../tokenbalances",  default_features = false }
-cxrml-exchange-pendingorders = { path = "../pendingorders",  default_features = false }
+# arml module
+arml-system = { path = "../../system", default-features = false }
+arml-associations = { path = "../../associations", default-features = false }
+arml-support = { path = "../../support",  default_features = false }
+arml-tokenbalances = { path = "../../tokenbalances",  default_features = false }
+arml-exchange-pendingorders = { path = "../pendingorders",  default_features = false }
 
 [features]
 default = ["std"]
@@ -39,9 +39,9 @@ std=[
     "srml-support/std",
     "srml-system/std",
     "srml-balances/std",
-    "cxrml-system/std",
-    "cxrml-associations/std",
-    "cxrml-support/std",
-    "cxrml-tokenbalances/std",
-    "cxrml-exchange-pendingorders/std",
+    "arml-system/std",
+    "arml-associations/std",
+    "arml-support/std",
+    "arml-tokenbalances/std",
+    "arml-exchange-pendingorders/std",
 ]
