--- a/arml/funds/financialrecords/Cargo.toml
+++ b/arml/funds/financialrecords/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "cxrml-funds-financialrecords"
+name = "arml-funds-financialrecords"
 version = "0.3.0"
-authors = ["Chainpool <https://www.chainx.org>"]
+authors = ["Akropolis <https://www.akropolis.io>"]
 
 [dependencies]
 hex-literal = "0.1.0"
@@ -17,11 +17,11 @@ srml-support = { git = "https://github.com/paritytech/substrate", default_featur
 srml-system = { git = "https://github.com/paritytech/substrate", default_features = false }
 srml-balances = { git = "https://github.com/paritytech/substrate", default_features = false }
 
-# cxrml module
-cxrml-system = { path = "../../system", default-features = false }
-cxrml-associations = { path = "../../associations", default-features = false }
-cxrml-support = { path = "../../support", default_features = false }
-cxrml-tokenbalances = { path = "../../tokenbalances", default_features = false }
+# arml module
+arml-system = { path = "../../system", default-features = false }
+arml-associations = { path = "../../associations", default-features = false }
+arml-support = { path = "../../support", default_features = false }
+arml-tokenbalances = { path = "../../tokenbalances", default_features = false }
 
 [features]
 default = ["std"]
@@ -37,8 +37,8 @@ std=[
     "srml-support/std",
     "srml-system/std",
     "srml-balances/std",
-    "cxrml-system/std",
-    "cxrml-associations/std",
-    "cxrml-support/std",
-    "cxrml-tokenbalances/std",
+    "arml-system/std",
+    "arml-associations/std",
+    "arml-support/std",
+    "arml-tokenbalances/std",
 ]
