--- a/arml/system/Cargo.toml
+++ b/arml/system/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "cxrml-system"
+name = "arml-system"
 version = "0.3.0"
-authors = ["Chainpool <http://chainx.org>"]
+authors = ["Akropolis <https://akropolis.io>"]
 
 
 [dependencies]
