--- a/consensus/Cargo.toml
+++ b/consensus/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "chainx-consensus"
+name = "akro-consensus"
 version = "0.3.0"
-authors = ["Chainpool <http://www.chainx.org>"]
+authors = ["Akropolis <https://www.akropolis.io>"]
 
 [dependencies]
 substrate-transaction-pool = { git = "https://github.com/paritytech/substrate" }
@@ -11,11 +11,11 @@ srml-support = { git = "https://github.com/paritytech/substrate" }
 substrate-client = { git = "https://github.com/paritytech/substrate" }
 sr-primitives = { git = "https://github.com/paritytech/substrate" }
 substrate-network = { git = "https://github.com/paritytech/substrate" }
-chainx-primitives = {path = "../primitives" }
-chainx-runtime = {path = "../runtime" }
+akro-primitives = {path = "../primitives" }
+akro-runtime = {path = "../runtime" }
 parity-codec = { version = "2.0" }
-chainx-pool = {path = "../pool" }
-chainx-api = {path = "../api" }
+akro-pool = {path = "../pool" }
+akro-api = {path = "../api" }
 error-chain = "0.12"
 rhododendron = "0.3"
 exit-future = "0.1"
