--- a/network/Cargo.toml
+++ b/network/Cargo.toml
@@ -1,17 +1,17 @@
 [package]
-name = "chainx-network"
+name = "akro-network"
 version = "0.3.0"
-authors = ["Chainpool <https://www.chainx.org>"]
+authors = ["Akropolis <https://www.akropolis.io>"]
 
 [dependencies]
 substrate-primitives = { git = "https://github.com/paritytech/substrate" }
 substrate-network = { git = "https://github.com/paritytech/substrate" }
 substrate-bft = { git = "https://github.com/paritytech/substrate" }
-chainx-primitives = { path = "../primitives" }
-chainx-consensus = { path = "../consensus" }
+akro-primitives = { path = "../primitives" }
+akro-consensus = { path = "../consensus" }
 parity-codec-derive = { version = "2.0" }
 parity-codec = { version = "2.0" }
-chainx-api = { path = "../api" }
+akro-api = { path = "../api" }
 rhododendron = "0.3"
 futures = "0.1"
 tokio = "0.1.7"
