--- a/pool/Cargo.toml
+++ b/pool/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "chainx-pool"
+name = "akro-pool"
 version = "0.3.0"
-authors = ["Chainpool  <http://www.chainx.org>"]
+authors = ["Akropolis  <https://www.akropolis.io>"]
 
 [dependencies]
 substrate-transaction-pool = { git = "https://github.com/paritytech/substrate" }
@@ -14,11 +14,11 @@ sr-primitives = { git = "https://github.com/paritytech/substrate" }
 substrate-network = { git = "https://github.com/paritytech/substrate" }
 substrate-client = { git = "https://github.com/paritytech/substrate" }
 substrate-client-db = { git = "https://github.com/paritytech/substrate" }
-chainx-primitives = { path = "../primitives" }
-chainx-runtime = { path = "../runtime" }
-chainx-executor = {path = "../executor"}
+akro-primitives = { path = "../primitives" }
+akro-runtime = { path = "../runtime" }
+akro-executor = {path = "../executor"}
 parity-codec = { version = "2.0" }
-chainx-api = { path = "../api" }
+akro-api = { path = "../api" }
 triehash = { version = "0.2.3" }
 error-chain = "0.12"
 hex-literal = "0.1"
