--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "chainx-primitives"
+name = "akro-primitives"
 version = "0.3.0"
-authors = ["Chainpool <http://www.chainx.org>"]
+authors = ["Akropolis <https://www.akropolis.io>"]
 
 [dependencies]
 serde = { version = "1.0", default_features = false }
