--- a/network/Cargo.toml
+++ b/network/Cargo.toml
@@ -4,9 +4,8 @@ version = "0.3.0"
 authors = ["Akropolis <https://www.akropolis.io>"]
 
 [dependencies]
-substrate-primitives = { git = "https://github.com/paritytech/substrate" }
-substrate-network = { git = "https://github.com/paritytech/substrate" }
-substrate-bft = { git = "https://github.com/paritytech/substrate" }
+substrate-primitives = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
+substrate-network = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
 akro-primitives = { path = "../primitives" }
 akro-consensus = { path = "../consensus" }
 parity-codec-derive = { version = "2.0" }
