--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -6,14 +6,14 @@ authors = ["Akropolis <https://www.akropolis.io>"]
 [dependencies]
 serde = { version = "1.0", default_features = false }
 serde_derive = { version = "1.0", optional = true }
-parity-codec = { version = "2.0", default-features = false }
+parity-codec = { version = "3.5", default-features = false, features = ['derive'] }
 parity-codec-derive = { version = "2.0", default-features = false }
-substrate-primitives = { git = "https://github.com/paritytech/substrate", default_features = false }
+substrate-primitives = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default_features = false }
 sr-std = { git = "https://github.com/paritytech/substrate/", default_features = false }
-sr-primitives = { git = "https://github.com/paritytech/substrate", default_features = false }
+sr-primitives = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830', default_features = false }
 
 [dev-dependencies]
-substrate-serializer = { git = "https://github.com/paritytech/substrate" }
+substrate-serializer = { git = "https://github.com/paritytech/substrate", rev = '2e30b7321df0cc4dba525cfcf18df8438e12b830' }
 pretty_assertions = "0.4"
 
 [features]
