--- a/arml/support/Cargo.toml
+++ b/arml/support/Cargo.toml
@@ -19,6 +19,7 @@ srml-balances = { git = "https://github.com/paritytech/substrate", rev = '2e30b7
 
 # akro runtime module
 arml-system = { path = "../system", default_features = false }
+arml-associations = { path = "../associations", default_features = false }
 
 [features]
 default = ["std"]
@@ -36,4 +37,5 @@ std=[
     "srml-balances/std",
     # arml
     "arml-system/std",
+    "arml-associations/std",
 ]
